#4587: Modified build script for test libs so that runtime libs are linked statically.

--- a/Python/src/tests_jmodelica/files/Modelica/Resources/CMakeLists.txt
+++ b/Python/src/tests_jmodelica/files/Modelica/Resources/CMakeLists.txt
@@ -74,6 +74,8 @@ if(NOT(WIN32 OR CYGWIN OR APPLE))
     SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_SHARED_LIBRARY_C_FLAGS}")
     SET(WITH_PIC ON)
 elseif(MSVC)
+    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} /MT")
+    set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} /MTd")
     add_definitions(/D _CRT_SECURE_NO_WARNINGS)
 endif()
 
