Make the `CasADiUpdate24` branch build under JM-SDK 1.11 (with swig updated to 3.0.7), for #4601: * Change gcc compiler option from `-std=c++11` to `-std=gnu++11`, since the former was excluding some functionality used in `JCCEnv.cpp`. * Put `#include <cmath>` at the beginning of the swig wrapper for CasADiInterface, to avoid strange problem with `hypot`. (Interaction with `Python.h`?) * Add a define for `NPY_ARRAY_IN_ARRAY` if we are using a numpy version that is too old to define the new name.

--- a/ModelicaCasADiInterface/src/CMakeLists.txt
+++ b/ModelicaCasADiInterface/src/CMakeLists.txt
@@ -14,7 +14,7 @@
 
 add_subdirectory(jcc)
 
-set(CXX_FLAGS "-std=c++11")
+set(CXX_FLAGS "-std=gnu++11")
 # Switch flag to debug for debuggind purposes 
 set(CMAKE_BUILD_TYPE Release)
 
