--- a/ModelicaCasADiInterface/swig/CMakeLists.txt
+++ b/ModelicaCasADiInterface/swig/CMakeLists.txt
@@ -50,4 +50,4 @@ set_target_properties(${SWIG_MODULE_${MODULE_NAME}_REAL_NAME}
 set_target_properties(${SWIG_MODULE_${MODULE_NAME}_REAL_NAME} 
   PROPERTIES COMPILE_DEFINITIONS MODELICACASADI_WITH_SWIG)
 set_target_properties(${SWIG_MODULE_${MODULE_NAME}_REAL_NAME} 
-  PROPERTIES COMPILE_FLAGS "-std=c++11")
+  PROPERTIES COMPILE_FLAGS "-std=gnu++11")
