--- a/RuntimeLibrary/src/jmi/CMakeLists.txt
+++ b/RuntimeLibrary/src/jmi/CMakeLists.txt
@@ -87,6 +87,12 @@ set(JMISources
     jmi_ode_problem.c
 )
 
+# Source files for ModelicaExternalC
+if(MSVC)
+    set(MODELICAEXTERNALCSources_EXTRA ${MSLCSOURCES}/win32_dirent.c)
+else()
+    set(MODELICAEXTERNALCSources_EXTRA "")
+endif()
 set(MODELICAEXTERNALCSources
     jmi_global.h
     ModelicaUtilities.h
@@ -96,8 +102,12 @@ set(MODELICAEXTERNALCSources
     
     ${MSLCSOURCES}/ModelicaInternal.c
     ${MSLCSOURCES}/ModelicaStrings.c
+    ${MSLCSOURCES}/ModelicaRandom.c
+    ${MSLCSOURCES}/ModelicaFFT.c
+    ${MODELICAEXTERNALCSources_EXTRA}
 )
 
+# Source files for ModelicaStandardTables
 set(STANDARDTABLESSources
     ${MSLCSOURCES}/ModelicaStandardTables.c
     ${MSLCSOURCES}/ModelicaMatIO.c
