--- a/RuntimeLibrary/src/jmi/CMakeLists.txt
+++ b/RuntimeLibrary/src/jmi/CMakeLists.txt
@@ -37,6 +37,7 @@ set(JMISources
     jmi_delay.h
     jmi_delay_impl.h
     jmi_dynamic_state.h
+    jmi_chattering.h
     
     jmi_util.c
     jmi_global.c
@@ -49,6 +50,7 @@ set(JMISources
     jmi_me.c
     jmi_delay.c
     jmi_dynamic_state.c
+    jmi_chattering.c
 
     # Logging sources
 	jmi_callbacks.h
