#3645: Modifying CasADi build so that it is possible to specify a Python distribution using PYTHON_HOME as an environment variable instead of two defines for Python libs and includes.

--- a/branches/dev-thirdparty-updates-20160215/JMI/src/Makefile.in
+++ b/branches/dev-thirdparty-updates-20160215/JMI/src/Makefile.in
@@ -352,6 +352,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PYTHON_HOME = @PYTHON_HOME@
 RANLIB = @RANLIB@
 SED = @SED@
 SEP = @SEP@
