--- a/branches/dev-thirdparty-updates-20160215/Makefile.in
+++ b/branches/dev-thirdparty-updates-20160215/Makefile.in
@@ -194,6 +194,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PYTHON_HOME = @PYTHON_HOME@
 RANLIB = @RANLIB@
 SED = @SED@
 SEP = @SEP@
@@ -290,10 +291,6 @@ MC_COMPILERS_DIR = $(MC_BUILD)/JModelica.org
 MC_LIB = $(DESTDIR)$(prefix)/lib/casadi_interface
 CASADI_BUILD_DIR = $(abs_builddir)/casadi_build
 SWIGCHECK_BUILD_DIR = $(abs_builddir)/swig_check
-
-# Hook for using a specific Python installation
-PYTHON_LIB = 
-PYTHON_INCLUDE = 
 
 # Hooks for extra build or install actions. Must be empty or the path of a shell script to execute. 
 # Both scripts will get the source directory as the first argument and the install directory as the second.
@@ -893,8 +890,8 @@ $(OC_SRC)/bin/separateProcess.jar:  mc_optimica
 $(MC_BUILD)/modelicacasadi_wrapper/swig/modelicacasadi_wrapper.py: modelicacasadi_wrapper
 
 modelicacasadi_wrapper: $(MC_SRC)/bin/ModelicaCompiler.jar $(OC_SRC)/bin/OptimicaCompiler.jar $(MC_SRC)/bin/util.jar ifcasadi # $(MC_LIB)
-	if [ "$(PYTHON_LIB)" ] && [ "$(PYTHON_INCLUDE)" ]; then \
-	  CMAKE_EXTRA_ARGS="-DPYTHON_LIBRARY=$(PYTHON_LIB) -DPYTHON_INCLUDE_DIR=$(PYTHON_INCLUDE)"; \
+	if [ "$(PYTHON_HOME)" ]; then \
+	  CMAKE_EXTRA_ARGS="-DPYTHON_LIBRARY=$(PYTHON_HOME)/libs/libpython27.a -DPYTHON_INCLUDE_DIR=$(PYTHON_HOME)/include"; \
 	else \
 	  CMAKE_EXTRA_ARGS=""; \
 	fi; \
