#4731 Added noncompliantfmi test tag to tests not compliant with fmi standard.

--- a/jm_tests.in
+++ b/jm_tests.in
@@ -80,7 +80,7 @@ test_set_o="optimica"
 test_set_p="python"
 
 # Standard set of tags
-TAGS="-a stddist -a fmi"
+TAGS="-a stddist -a fmi -a noncompliantfmi"
 if [[ "${IPOPT_HOME}" != "" ]]; then
   TAGS="${TAGS} -a ipopt"
   if [[ "${SYS}" == Win ]]; then
