--- a/trunk/RuntimeLibrary/src/jmi/CMakeLists.txt
+++ b/trunk/RuntimeLibrary/src/jmi/CMakeLists.txt
@@ -188,7 +188,7 @@ install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/"
     DESTINATION "${RTLIB_INCLUDE_DIR}"
     FILES_MATCHING PATTERN "*.h")
     
-install(DIRECTORY "${MSLCSOURCES}"
+install(DIRECTORY "${MSLCSOURCES}/"
     DESTINATION "${RTLIB_INCLUDE_DIR}"
     FILES_MATCHING PATTERN "*.h")
 
