Reverted build system changes that are not compatible with MSL version in branch. (#4899)

--- a/JMI/src/Makefile.am
+++ b/JMI/src/Makefile.am
@@ -131,9 +131,7 @@ libModelicaExternalC_la_SOURCES =  ModelicaUtilities.h \
                                    jmi_global.h \
                                    jmi_global.c \
                                    $(MSLCSOURCES)/ModelicaInternal.c \
-	                               $(MSLCSOURCES)/ModelicaStrings.c \
-	                               $(MSLCSOURCES)/ModelicaRandom.c \
-	                               $(MSLCSOURCES)/ModelicaFFT.c
+	                               $(MSLCSOURCES)/ModelicaStrings.c
 
 libModelicaExternalC_la_CFLAGS = -Wall -g -std=c89 -pedantic -I$(MSLCSOURCES)
 
