--- a/JMI/src/Makefile.in
+++ b/JMI/src/Makefile.in
@@ -103,9 +103,7 @@ am_libModelicaExternalC_la_OBJECTS =  \
 	libModelicaExternalC_la-ModelicaUtilities.lo \
 	libModelicaExternalC_la-jmi_global.lo \
 	libModelicaExternalC_la-ModelicaInternal.lo \
-	libModelicaExternalC_la-ModelicaStrings.lo \
-	libModelicaExternalC_la-ModelicaRandom.lo \
-	libModelicaExternalC_la-ModelicaFFT.lo
+	libModelicaExternalC_la-ModelicaStrings.lo
 libModelicaExternalC_la_OBJECTS =  \
 	$(am_libModelicaExternalC_la_OBJECTS)
 libModelicaExternalC_la_LINK = $(LIBTOOL) --tag=CC $(AM_LIBTOOLFLAGS) \
@@ -525,9 +523,7 @@ libModelicaExternalC_la_SOURCES = ModelicaUtilities.h \
                                    jmi_global.h \
                                    jmi_global.c \
                                    $(MSLCSOURCES)/ModelicaInternal.c \
-	                               $(MSLCSOURCES)/ModelicaStrings.c \
-	                               $(MSLCSOURCES)/ModelicaRandom.c \
-	                               $(MSLCSOURCES)/ModelicaFFT.c
+	                               $(MSLCSOURCES)/ModelicaStrings.c
 
 libModelicaExternalC_la_CFLAGS = -Wall -g -std=c89 -pedantic -I$(MSLCSOURCES)
 
@@ -710,9 +706,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libModelicaExternalC_la-ModelicaFFT.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libModelicaExternalC_la-ModelicaInternal.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libModelicaExternalC_la-ModelicaRandom.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libModelicaExternalC_la-ModelicaStrings.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libModelicaExternalC_la-ModelicaUtilities.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/libModelicaExternalC_la-jmi_global.Plo@am__quote@
@@ -826,20 +820,6 @@ libModelicaExternalC_la-ModelicaStrings.lo: $(MSLCSOURCES)/ModelicaStrings.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(MSLCSOURCES)/ModelicaStrings.c' object='libModelicaExternalC_la-ModelicaStrings.lo' libtool=yes @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libModelicaExternalC_la_CFLAGS) $(CFLAGS) -c -o libModelicaExternalC_la-ModelicaStrings.lo `test -f '$(MSLCSOURCES)/ModelicaStrings.c' || echo '$(srcdir)/'`$(MSLCSOURCES)/ModelicaStrings.c
-
-libModelicaExternalC_la-ModelicaRandom.lo: $(MSLCSOURCES)/ModelicaRandom.c
-@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libModelicaExternalC_la_CFLAGS) $(CFLAGS) -MT libModelicaExternalC_la-ModelicaRandom.lo -MD -MP -MF $(DEPDIR)/libModelicaExternalC_la-ModelicaRandom.Tpo -c -o libModelicaExternalC_la-ModelicaRandom.lo `test -f '$(MSLCSOURCES)/ModelicaRandom.c' || echo '$(srcdir)/'`$(MSLCSOURCES)/ModelicaRandom.c
-@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/libModelicaExternalC_la-ModelicaRandom.Tpo $(DEPDIR)/libModelicaExternalC_la-ModelicaRandom.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(MSLCSOURCES)/ModelicaRandom.c' object='libModelicaExternalC_la-ModelicaRandom.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libModelicaExternalC_la_CFLAGS) $(CFLAGS) -c -o libModelicaExternalC_la-ModelicaRandom.lo `test -f '$(MSLCSOURCES)/ModelicaRandom.c' || echo '$(srcdir)/'`$(MSLCSOURCES)/ModelicaRandom.c
-
-libModelicaExternalC_la-ModelicaFFT.lo: $(MSLCSOURCES)/ModelicaFFT.c
-@am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libModelicaExternalC_la_CFLAGS) $(CFLAGS) -MT libModelicaExternalC_la-ModelicaFFT.lo -MD -MP -MF $(DEPDIR)/libModelicaExternalC_la-ModelicaFFT.Tpo -c -o libModelicaExternalC_la-ModelicaFFT.lo `test -f '$(MSLCSOURCES)/ModelicaFFT.c' || echo '$(srcdir)/'`$(MSLCSOURCES)/ModelicaFFT.c
-@am__fastdepCC_TRUE@	$(am__mv) $(DEPDIR)/libModelicaExternalC_la-ModelicaFFT.Tpo $(DEPDIR)/libModelicaExternalC_la-ModelicaFFT.Plo
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='$(MSLCSOURCES)/ModelicaFFT.c' object='libModelicaExternalC_la-ModelicaFFT.lo' libtool=yes @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCC_FALSE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libModelicaExternalC_la_CFLAGS) $(CFLAGS) -c -o libModelicaExternalC_la-ModelicaFFT.lo `test -f '$(MSLCSOURCES)/ModelicaFFT.c' || echo '$(srcdir)/'`$(MSLCSOURCES)/ModelicaFFT.c
 
 libModelicaStandardTables_la-ModelicaStandardTables.lo: $(MSLCSOURCES)/ModelicaStandardTables.c
 @am__fastdepCC_TRUE@	$(LIBTOOL)  --tag=CC $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(libModelicaStandardTables_la_CFLAGS) $(CFLAGS) -MT libModelicaStandardTables_la-ModelicaStandardTables.lo -MD -MP -MF $(DEPDIR)/libModelicaStandardTables_la-ModelicaStandardTables.Tpo -c -o libModelicaStandardTables_la-ModelicaStandardTables.lo `test -f '$(MSLCSOURCES)/ModelicaStandardTables.c' || echo '$(srcdir)/'`$(MSLCSOURCES)/ModelicaStandardTables.c
