--- a/RuntimeLibrary/Makefiles/Makefile.windows
+++ b/RuntimeLibrary/Makefiles/Makefile.windows
@@ -188,7 +188,7 @@ LIB_PTHREADS =
 endif
 
 # Libraries necessary to link with jmi
-LIBS_FMU_STD = -ljmi "-L$(JMI_LIB_DIR)" $(EXT_LIB_DIRS) $(EXTERNAL_LIBS) -ljmi -lModelicaExternalC -lzlib -lstdc++ -static-libstdc++
+LIBS_FMU_STD = -ljmi "-L$(JMI_LIB_DIR)" $(EXT_LIB_DIRS) $(EXTERNAL_LIBS) -lModelicaExternalC -lzlib -lstdc++ -static-libstdc++ -ljmi
 LIBS_FMU_ALL = $(LIBS_FMU_STD) $(LIB_SUNDIALS) $(LIB_MINPACK) $(LIB_PTHREADS)
 LIBS_FMUME10 = -lfmi1_me           $(LIBS_FMU_ALL)
 LIBS_FMUCS10 = -lfmi1_cs -lfmi1_me $(LIBS_FMU_ALL)
