Fixed missing make variable after r8871. (#3645)

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,11 +31,13 @@ bindistdir=JModelica.org-$(VERSION)-bin
 
 casadi:
 	cd $(abs_builddir)/ThirdParty/CasADi; \
-	make -f Makefile "CMAKE_PYTHON_LIBRARY=$(PYTHON_LIB)" "CMAKE_PYTHON_INCLUDE_DIR=$(PYTHON_INCLUDE)" "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)"
+	make -f Makefile "CMAKE_PYTHON_LIBRARY=$(PYTHON_LIB)" "CMAKE_PYTHON_INCLUDE_DIR=$(PYTHON_INCLUDE)" \
+	    "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
 
 install_casadi: casadi
 	cd $(abs_builddir)/ThirdParty/CasADi; \
-	make -f Makefile install "CMAKE_PYTHON_LIBRARY=$(PYTHON_LIB)" "CMAKE_PYTHON_INCLUDE_DIR=$(PYTHON_INCLUDE)" "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)"
+	make -f Makefile install "CMAKE_PYTHON_LIBRARY=$(PYTHON_LIB)" "CMAKE_PYTHON_INCLUDE_DIR=$(PYTHON_INCLUDE)" \
+	    "SWIGCHECK_BUILD_DIR=$(SWIGCHECK_BUILD_DIR)" "CASADI_BUILD_DIR=$(CASADI_BUILD_DIR)" "IPOPT_HOME=$(IPOPT_HOME)"
 	mkdir -p $(DESTDIR)$(prefix)/Python/
 	cp -r $(abs_builddir)/casadi_install/casadi $(DESTDIR)$(prefix)/Python/
 	## temp fix
